Logo spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,7 @@ img {
 }
 
 .navbar-brand{
-    padding: 25px 0;
+    padding: 30px 0;
     text-transform: uppercase;
     font-size: 25px;
     display: block;
